# calculate-flops.pytorch

./: pyproject.toml
calflops/: flops_counter.py
